test/resources/parser/failing/ExtCallError2.scala
object CallError {
  1 match { case 1 => 1 }()
}
